--- a/Views/Skills/SkillForm.cshtml
+++ b/Views/Skills/SkillForm.cshtml
@@ -3,39 +3,44 @@
     ViewBag.Title = Model.ViewTitle;
 }
 
-<h2>@Model.ViewTitle</h2>
+@Html.Partial("_Header")
 
-@using (Html.BeginForm("Save", "Skills"))
-{
-    <div class="mb-3">
-        @Html.LabelFor(s => s.Title)
-        @Html.TextBoxFor(s => s.Title, new { @class = "form-control" })
+<div class="ex-basic-1 bg-black pb-4">
+    <div class="container">
+        <p>@Html.ActionLink("Skill List", "Index", "Skill", new { @class = "btn btn-primary" })</p>
+        @using (Html.BeginForm("Save", "Skills"))
+        {
+            <div class="mb-3">
+                @Html.LabelFor(s => s.Title)
+                @Html.TextBoxFor(s => s.Title, new { @class = "form-control" })
+            </div>
+            <div class="mb-3">
+                @Html.LabelFor(s => s.Icon)
+                @Html.TextBoxFor(s => s.Icon, new { @class = "form-control" })
+            </div>
+            <div class="mb-3">
+                @Html.LabelFor(s => s.Description)
+                @Html.TextBoxFor(s => s.Description, new { @class = "form-control" })
+            </div>
+            <div class="mb-3">
+                @Html.LabelFor(s => s.Developer)
+                @Html.TextBoxFor(s => s.Developer, new { @class = "form-control" })
+            </div>
+            <div class="mb-3">
+                @Html.LabelFor(s => s.ReleaseDate)
+                @Html.TextBoxFor(s => s.ReleaseDate, "{0:d MMM yyyy}", new { @class = "form-control" })
+            </div>
+            <div class="mb-3">
+                @Html.LabelFor(s => s.RepositoryUrl)
+                @Html.TextBoxFor(s => s.RepositoryUrl, new { @class = "form-control" })
+            </div>
+            <div class="mb-3">
+                @Html.LabelFor(s => s.DocumentationUrl)
+                @Html.TextBoxFor(s => s.DocumentationUrl, new { @class = "form-control" })
+            </div>
+            @Html.HiddenFor(s => s.Id)
+            @Html.HiddenFor(s => s.DateAdded)
+            <button type="submit" class="btn btn-primary">Save</button>
+        }
     </div>
-    <div class="mb-3">
-        @Html.LabelFor(s => s.Icon)
-        @Html.TextBoxFor(s => s.Icon, new { @class = "form-control" })
-    </div>
-    <div class="mb-3">
-        @Html.LabelFor(s => s.Description)
-        @Html.TextBoxFor(s => s.Description, new { @class = "form-control" })
-    </div>
-    <div class="mb-3">
-        @Html.LabelFor(s => s.Developer)
-        @Html.TextBoxFor(s => s.Developer, new { @class = "form-control" })
-    </div>
-    <div class="mb-3">
-        @Html.LabelFor(s => s.ReleaseDate)
-        @Html.TextBoxFor(s => s.ReleaseDate, "{0:d MMM yyyy}", new { @class = "form-control" })
-    </div>
-    <div class="mb-3">
-        @Html.LabelFor(s => s.RepositoryUrl)
-        @Html.TextBoxFor(s => s.RepositoryUrl, new { @class = "form-control" })
-    </div>
-    <div class="mb-3">
-        @Html.LabelFor(s => s.DocumentationUrl)
-        @Html.TextBoxFor(s => s.DocumentationUrl, new { @class = "form-control" })
-    </div>
-    @Html.HiddenFor(s => s.Id)
-    @Html.HiddenFor(s => s.DateAdded)
-    <button type="submit" class="btn btn-primary">Save</button>
-}
+</div>
